@@ -12,23 +12,17 @@ import java.text.DateFormatSymbols;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Locale;
-import java.util.stream.Collectors;
 
 import org.junit.Assert;
 import org.junit.Test;
 import org.openqa.selenium.By;
 import org.openqa.selenium.WebElement;
 
-import com.vaadin.flow.component.charts.examples.AbstractChartExample;
-import com.vaadin.flow.component.charts.examples.other.GlobalOptions;
 import com.vaadin.flow.component.charts.testbench.ChartElement;
+import com.vaadin.flow.testutil.TestPath;
 
-public class GlobalOptionsIT extends AbstractTBTest {
-
-    @Override
-    protected Class<? extends AbstractChartExample> getView() {
-        return GlobalOptions.class;
-    }
+@TestPath("vaadin-charts/other/global-options")
+public class GlobalOptionsIT extends AbstractChartIT {
 
     @Test
     public void addChart_defaultLangUsed() {
@@ -67,7 +61,7 @@ public class GlobalOptionsIT extends AbstractTBTest {
         List<WebElement> axisLabels = container.findElements(
                 By.cssSelector(".highcharts-xaxis-labels > text"));
         List<String> actual = axisLabels.stream().map(WebElement::getText)
-                .collect(Collectors.toList());
+                .toList();
         List<String> expected = Arrays
                 .asList(new DateFormatSymbols(locale).getShortWeekdays());
         Assert.assertTrue(expected.containsAll(actual));
