@@ -19,7 +19,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.function.Function;
-import java.util.stream.Collectors;
+import java.util.function.IntPredicate;
 
 import org.junit.Assert;
 import org.junit.Ignore;
@@ -60,6 +60,28 @@ public class AbstractComboBoxIT extends AbstractComponentIT {
             ComboBoxElement comboBox) {
         Assert.assertEquals(message, expectedCount,
                 getLoadedItems(comboBox).size());
+    }
+
+    /**
+     * Waits until the number of loaded items matches the expected count. Items
+     * are loaded asynchronously after opening the overlay or changing the page
+     * size, so asserting the count without waiting is prone to timing issues.
+     */
+    protected void waitForLoadedItemsCount(String message, int expectedCount,
+            ComboBoxElement comboBox) {
+        waitForLoadedItemsCount(message, count -> count == expectedCount,
+                comboBox);
+    }
+
+    protected void waitForLoadedItemsCount(String message,
+            IntPredicate expectedCount, ComboBoxElement comboBox) {
+        try {
+            waitUntil(driver -> expectedCount
+                    .test(getLoadedItems(comboBox).size()));
+        } catch (TimeoutException e) {
+            Assert.fail(message + " Loaded items count: "
+                    + getLoadedItems(comboBox).size());
+        }
     }
 
     // Gets all the loaded json items, but they are not necessarily rendered
@@ -111,14 +133,13 @@ public class AbstractComboBoxIT extends AbstractComponentIT {
     // There's more items loaded though.
     protected List<String> getOverlayContents(ComboBoxElement comboBox) {
         return getItemElements(comboBox).stream().map(this::getItemLabel)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     protected List<String> getNonEmptyOverlayContents(
             ComboBoxElement comboBox) {
         return getOverlayContents(comboBox).stream()
-                .filter(rendered -> !rendered.isEmpty())
-                .collect(Collectors.toList());
+                .filter(rendered -> !rendered.isEmpty()).toList();
     }
 
     protected String getItemLabel(TestBenchElement itemElement) {
@@ -128,8 +149,7 @@ public class AbstractComboBoxIT extends AbstractComponentIT {
 
     protected List<TestBenchElement> getItemElements(ComboBoxElement comboBox) {
         return getScroller(comboBox).$("vaadin-combo-box-item").all().stream()
-                .filter(element -> !element.hasAttribute("hidden"))
-                .collect(Collectors.toList());
+                .filter(element -> !element.hasAttribute("hidden")).toList();
     }
 
     protected void scrollToItem(ComboBoxElement comboBox, int index) {
