@@ -20,12 +20,13 @@ import java.io.IOException;
 import java.io.ObjectOutputStream;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
+import com.vaadin.flow.component.ClickEvent;
 import com.vaadin.flow.component.Component;
+import com.vaadin.flow.component.ComponentEventListener;
 import com.vaadin.flow.component.ComponentUtil;
 import com.vaadin.flow.component.html.Div;
 import com.vaadin.flow.component.html.NativeButton;
@@ -47,32 +48,31 @@ class ContextMenuTest {
 
         contextMenu.addComponent(span1, span2);
 
-        List<Component> children = contextMenu.getChildren()
-                .collect(Collectors.toList());
+        List<Component> children = contextMenu.getChildren().toList();
         Assertions.assertEquals(2, children.size());
         Assertions.assertTrue(children.contains(span1));
         Assertions.assertTrue(children.contains(span2));
 
         contextMenu.addComponent(span3);
-        children = contextMenu.getChildren().collect(Collectors.toList());
+        children = contextMenu.getChildren().toList();
         Assertions.assertEquals(3, children.size());
         Assertions.assertTrue(children.contains(span1));
         Assertions.assertTrue(children.contains(span2));
         Assertions.assertTrue(children.contains(span3));
 
         contextMenu.remove(span2);
-        children = contextMenu.getChildren().collect(Collectors.toList());
+        children = contextMenu.getChildren().toList();
         Assertions.assertEquals(2, children.size());
         Assertions.assertTrue(children.contains(span1));
         Assertions.assertTrue(children.contains(span3));
 
         contextMenu.remove(span1);
-        children = contextMenu.getChildren().collect(Collectors.toList());
+        children = contextMenu.getChildren().toList();
         Assertions.assertEquals(1, children.size());
         Assertions.assertTrue(children.contains(span3));
 
         contextMenu.removeAll();
-        children = contextMenu.getChildren().collect(Collectors.toList());
+        children = contextMenu.getChildren().toList();
         Assertions.assertEquals(0, children.size());
     }
 
@@ -96,9 +96,9 @@ class ContextMenuTest {
     @Test
     void addItem_getChildren_returnsMenuItem() {
         ContextMenu contextMenu = new ContextMenu();
-        contextMenu.addItem("foo", null);
-        List<Component> children = contextMenu.getChildren()
-                .collect(Collectors.toList());
+        contextMenu.addItem("foo",
+                (ComponentEventListener<ClickEvent<MenuItem>>) null);
+        List<Component> children = contextMenu.getChildren().toList();
         Assertions.assertEquals(1, children.size());
         assertComponentIsMenuItem(children.get(0), "foo");
     }
@@ -106,7 +106,8 @@ class ContextMenuTest {
     @Test
     void addItem_getItems_returnsMenuItem() {
         ContextMenu contextMenu = new ContextMenu();
-        contextMenu.addItem("foo", null);
+        contextMenu.addItem("foo",
+                (ComponentEventListener<ClickEvent<MenuItem>>) null);
         List<MenuItem> children = contextMenu.getItems();
         Assertions.assertEquals(1, children.size());
         assertComponentIsMenuItem(children.get(0), "foo");
@@ -115,7 +116,8 @@ class ContextMenuTest {
     @Test
     void addItem_remove_noChildrenNorItems() {
         ContextMenu contextMenu = new ContextMenu();
-        MenuItem item = contextMenu.addItem("foo", null);
+        MenuItem item = contextMenu.addItem("foo",
+                (ComponentEventListener<ClickEvent<MenuItem>>) null);
         contextMenu.remove(item);
         Assertions.assertEquals(0, contextMenu.getChildren().count());
         Assertions.assertEquals(0, contextMenu.getItems().size());
@@ -125,18 +127,19 @@ class ContextMenuTest {
     void addItemsAndComponents_getChildrenReturnsAllInOrder() {
         ContextMenu contextMenu = new ContextMenu();
 
-        MenuItem item1 = contextMenu.addItem("foo", null);
+        MenuItem item1 = contextMenu.addItem("foo",
+                (ComponentEventListener<ClickEvent<MenuItem>>) null);
 
         Span span1 = new Span("foo");
         contextMenu.addComponent(span1);
 
-        MenuItem item2 = contextMenu.addItem("bar", null);
+        MenuItem item2 = contextMenu.addItem("bar",
+                (ComponentEventListener<ClickEvent<MenuItem>>) null);
 
         Span span2 = new Span("bar");
         contextMenu.addComponent(span2);
 
-        List<Component> children = contextMenu.getChildren()
-                .collect(Collectors.toList());
+        List<Component> children = contextMenu.getChildren().toList();
         Assertions.assertEquals(4, children.size());
 
         Assertions.assertEquals(item1, children.get(0));
@@ -148,9 +151,11 @@ class ContextMenuTest {
     @Test
     void addItemsAndSeparator_separatorOnlyIncludedInChildren() {
         var contextMenu = new ContextMenu();
-        var item1 = contextMenu.addItem("foo", null);
+        var item1 = contextMenu.addItem("foo",
+                (ComponentEventListener<ClickEvent<MenuItem>>) null);
         contextMenu.addSeparator();
-        var item2 = contextMenu.addItem("bar", null);
+        var item2 = contextMenu.addItem("bar",
+                (ComponentEventListener<ClickEvent<MenuItem>>) null);
 
         var children = contextMenu.getChildren().toList();
         var items = contextMenu.getItems();
@@ -166,12 +171,14 @@ class ContextMenuTest {
     void addItemsAndComponents_getItemsReturnsItemsOnly() {
         ContextMenu contextMenu = new ContextMenu();
 
-        MenuItem item1 = contextMenu.addItem("foo", null);
+        MenuItem item1 = contextMenu.addItem("foo",
+                (ComponentEventListener<ClickEvent<MenuItem>>) null);
 
         Span span1 = new Span("foo");
         contextMenu.addComponent(span1);
 
-        MenuItem item2 = contextMenu.addItem("bar", null);
+        MenuItem item2 = contextMenu.addItem("bar",
+                (ComponentEventListener<ClickEvent<MenuItem>>) null);
 
         Span span2 = new Span("bar");
         contextMenu.addComponent(span2);
@@ -198,11 +205,15 @@ class ContextMenuTest {
     void addItemsWithNullClickListeners_doesNotThrow() {
         ContextMenu contextMenu = new ContextMenu();
 
-        MenuItem foo = contextMenu.addItem("foo", null);
-        contextMenu.addItem(new Div(), null);
+        MenuItem foo = contextMenu.addItem("foo",
+                (ComponentEventListener<ClickEvent<MenuItem>>) null);
+        contextMenu.addItem(new Div(),
+                (ComponentEventListener<ClickEvent<MenuItem>>) null);
 
-        foo.getSubMenu().addItem("bar", null);
-        foo.getSubMenu().addItem(new Div(), null);
+        foo.getSubMenu().addItem("bar",
+                (ComponentEventListener<ClickEvent<MenuItem>>) null);
+        foo.getSubMenu().addItem(new Div(),
+                (ComponentEventListener<ClickEvent<MenuItem>>) null);
     }
 
     @Test
