@@ -13,7 +13,6 @@ import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import com.vaadin.flow.component.AttachEvent;
 import com.vaadin.flow.component.Component;
@@ -46,9 +45,10 @@ import tools.jackson.databind.node.ObjectNode;
  * @param <E>
  *            the bean type
  * @author Vaadin Ltd
+ * @since 1.0
  */
 @Tag("vaadin-crud")
-@NpmPackage(value = "@vaadin/crud", version = "25.2.0-alpha2")
+@NpmPackage(value = "@vaadin/crud", version = "25.3.0-alpha12")
 @JsModule("@vaadin/crud/src/vaadin-crud.js")
 @JsModule("@vaadin/crud/src/vaadin-crud-edit-column.js")
 public class Crud<E> extends Component implements HasSize, HasTheme, HasStyle {
@@ -267,6 +267,7 @@ public class Crud<E> extends Component implements HasSize, HasTheme, HasStyle {
      *            the item to be edited
      * @param editMode
      *            the edit mode
+     * @since 2.0
      */
     public void edit(E item, EditMode editMode) {
         final CrudEvent<E> event;
@@ -312,6 +313,7 @@ public class Crud<E> extends Component implements HasSize, HasTheme, HasStyle {
      * @param dirty
      *            true if dirty and false if otherwise.
      * @see #getSaveButton()
+     * @since 2.0
      */
     public void setDirty(boolean dirty) {
         getElement().executeJs("this.__isDirty = $0", dirty);
@@ -433,6 +435,7 @@ public class Crud<E> extends Component implements HasSize, HasTheme, HasStyle {
      * @param editorPosition
      *            the editor position, never <code>null</code>
      * @see CrudEditorPosition
+     * @since 2.1
      */
     public void setEditorPosition(CrudEditorPosition editorPosition) {
         if (editorPosition == null) {
@@ -449,6 +452,7 @@ public class Crud<E> extends Component implements HasSize, HasTheme, HasStyle {
      * The default position is {@link CrudEditorPosition#OVERLAY}.
      *
      * @return the editor position
+     * @since 2.1
      */
     public CrudEditorPosition getEditorPosition() {
         return CrudEditorPosition.toPosition(
@@ -465,6 +469,7 @@ public class Crud<E> extends Component implements HasSize, HasTheme, HasStyle {
      *
      * @param editOnClick
      *            {@code true} to enable it ({@code false}, by default).
+     * @since 2.1
      */
     public void setEditOnClick(boolean editOnClick) {
         getElement().setProperty("editOnClick", editOnClick);
@@ -494,6 +499,7 @@ public class Crud<E> extends Component implements HasSize, HasTheme, HasStyle {
      * Gets whether click on row to edit item is enabled or not.
      *
      * @return {@code true} if enabled, {@code false} otherwise
+     * @since 2.1
      */
     public boolean isEditOnClick() {
         return getElement().getProperty("editOnClick", false);
@@ -534,9 +540,11 @@ public class Crud<E> extends Component implements HasSize, HasTheme, HasStyle {
     }
 
     /**
-     * Controls visiblity of toolbar
+     * Controls the visibility of the toolbar.
      *
      * @param value
+     *            {@code true} to show the toolbar, {@code false} to hide it
+     * @since 22.0
      */
     public void setToolbarVisible(boolean value) {
         toolbarVisible = value;
@@ -548,10 +556,10 @@ public class Crud<E> extends Component implements HasSize, HasTheme, HasStyle {
     }
 
     /**
-     * Gets visiblity state of toolbar
+     * Gets the visibility state of the toolbar.
      *
-     * @param
-     * @return true if toolbar is visible false otherwise
+     * @return true if toolbar is visible, false otherwise
+     * @since 22.0
      */
     public boolean getToolbarVisible() {
         return toolbarVisible;
@@ -561,6 +569,7 @@ public class Crud<E> extends Component implements HasSize, HasTheme, HasStyle {
      * Gets the Crud new item button
      *
      * @return the new item button
+     * @since 24.0
      */
     public Component getNewButton() {
         return newButton;
@@ -570,6 +579,8 @@ public class Crud<E> extends Component implements HasSize, HasTheme, HasStyle {
      * Sets the Crud new item button
      *
      * @param button
+     *            the new item button
+     * @since 24.0
      */
     public void setNewButton(Component button) {
         newButton = button;
@@ -580,6 +591,7 @@ public class Crud<E> extends Component implements HasSize, HasTheme, HasStyle {
      * Gets the Crud editor delete button
      *
      * @return the delete button
+     * @since 22.0
      */
     public Button getDeleteButton() {
         return deleteButton;
@@ -594,6 +606,7 @@ public class Crud<E> extends Component implements HasSize, HasTheme, HasStyle {
      *
      * @return the save button
      * @see Crud#setDirty(boolean)
+     * @since 22.0
      */
     public Button getSaveButton() {
         return saveButton;
@@ -603,6 +616,7 @@ public class Crud<E> extends Component implements HasSize, HasTheme, HasStyle {
      * Gets the Crud cancel button
      *
      * @return the cancel button
+     * @since 22.0
      */
     public Button getCancelButton() {
         return cancelButton;
@@ -640,7 +654,7 @@ public class Crud<E> extends Component implements HasSize, HasTheme, HasStyle {
 
     private static List<String> variantNames(CrudVariant... variants) {
         return Arrays.stream(variants).map(CrudVariant::getVariantName)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -903,6 +917,7 @@ public class Crud<E> extends Component implements HasSize, HasTheme, HasStyle {
          *            represented in Grid
          * @param ignored
          *            an ignored parameter for a side effect
+         * @since 25.0
          */
         public EditEvent(Crud<E> source, boolean fromClient,
                 @EventData("event.detail.item") ObjectNode item,
@@ -974,6 +989,7 @@ public class Crud<E> extends Component implements HasSize, HasTheme, HasStyle {
          * Gets new item being created
          *
          * @return a new instance of bean type
+         * @since 2.0
          */
         @Override
         public E getItem() {
@@ -1013,6 +1029,7 @@ public class Crud<E> extends Component implements HasSize, HasTheme, HasStyle {
      * new item or an existing item.
      *
      * @see Crud#edit(Object, EditMode)
+     * @since 2.0
      */
     public enum EditMode {
         /**
