@@ -16,7 +16,6 @@
 package com.vaadin.flow.component.customfield;
 
 import java.util.Objects;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.slf4j.LoggerFactory;
@@ -44,9 +43,10 @@ import com.vaadin.flow.dom.Element;
  *
  * @param <T>
  *            field value type
+ * @since 1.0
  */
 @Tag("vaadin-custom-field")
-@NpmPackage(value = "@vaadin/custom-field", version = "25.2.0-alpha2")
+@NpmPackage(value = "@vaadin/custom-field", version = "25.3.0-alpha12")
 @JsModule("@vaadin/custom-field/src/vaadin-custom-field.js")
 public abstract class CustomField<T> extends AbstractField<CustomField<T>, T>
         implements Focusable<CustomField<T>>,
@@ -86,6 +86,7 @@ public abstract class CustomField<T> extends AbstractField<CustomField<T>, T>
      *            by default.
      *
      * @see AbstractField#AbstractField(Object)
+     * @since 24.9
      */
     public CustomField(T defaultValue, boolean manualValueUpdate) {
         super(defaultValue);
@@ -146,6 +147,7 @@ public abstract class CustomField<T> extends AbstractField<CustomField<T>, T>
      *
      * @param components
      *            the components to add
+     * @since 2.0
      */
     protected void add(Component... components) {
         Objects.requireNonNull(components, "Components should not be null");
@@ -163,6 +165,7 @@ public abstract class CustomField<T> extends AbstractField<CustomField<T>, T>
      *            the components to remove
      * @throws IllegalArgumentException
      *             if any of the components is not a child of this component
+     * @since 2.0
      */
     protected void remove(Component... components) {
         Objects.requireNonNull(components, "Components should not be null");
@@ -210,11 +213,11 @@ public abstract class CustomField<T> extends AbstractField<CustomField<T>, T>
      *
      * @param variants
      *            theme variants to add
+     * @since 23.1
      */
     public void addThemeVariants(CustomFieldVariant... variants) {
-        getThemeNames().addAll(
-                Stream.of(variants).map(CustomFieldVariant::getVariantName)
-                        .collect(Collectors.toList()));
+        getThemeNames().addAll(Stream.of(variants)
+                .map(CustomFieldVariant::getVariantName).toList());
     }
 
     /**
@@ -222,10 +225,10 @@ public abstract class CustomField<T> extends AbstractField<CustomField<T>, T>
      *
      * @param variants
      *            theme variants to remove
+     * @since 23.1
      */
     public void removeThemeVariants(CustomFieldVariant... variants) {
-        getThemeNames().removeAll(
-                Stream.of(variants).map(CustomFieldVariant::getVariantName)
-                        .collect(Collectors.toList()));
+        getThemeNames().removeAll(Stream.of(variants)
+                .map(CustomFieldVariant::getVariantName).toList());
     }
 }
