@@ -16,6 +16,7 @@
 package com.vaadin.flow.component.grid;
 
 import java.io.Serializable;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -68,21 +69,6 @@ abstract class AbstractColumn<T extends AbstractColumn<T>> extends Component
      */
     public Grid<?> getGrid() {
         return grid;
-    }
-
-    /**
-     * {@inheritDoc}
-     * <p>
-     * Note that column related data is sent to the client side even if the
-     * column is invisible. Use {@link Grid#removeColumn(Column)} to remove
-     * column (or don't add the column all) and avoid sending extra data.
-     * </p>
-     *
-     * @see Grid#removeColumn(Column)
-     */
-    @Override
-    public void setVisible(boolean visible) {
-        super.setVisible(visible);
     }
 
     private void scheduleHeaderRendering() {
@@ -341,13 +327,14 @@ abstract class AbstractColumn<T extends AbstractColumn<T>> extends Component
     protected List<Column<?>> getBottomChildColumns() {
         List<Column<?>> columnChildren = getChildren()
                 .filter(child -> child instanceof Column<?>)
-                .map(child -> (Column<?>) child).collect(Collectors.toList());
+                .map(child -> (Column<?>) child)
+                .collect(Collectors.toCollection(ArrayList::new));
 
         columnChildren.addAll(
                 getChildren().filter(child -> child instanceof ColumnGroup)
                         .flatMap(child -> ((ColumnGroup) child)
                                 .getBottomChildColumns().stream())
-                        .collect(Collectors.toList()));
+                        .toList());
         return columnChildren;
     }
 }
