@@ -57,6 +57,7 @@ import tools.jackson.databind.node.ObjectNode;
  * @param <T>
  *            the grid type
  * @author Vaadin Ltd.
+ * @since 1.0
  */
 public abstract class AbstractGridMultiSelectionModel<T>
         extends AbstractGridExtension<T> implements GridMultiSelectionModel<T> {
@@ -192,6 +193,7 @@ public abstract class AbstractGridMultiSelectionModel<T>
      *
      * @return An unmodifiable view of the selected item ids. Updates in the
      *         selection may or may not be directly reflected in the Set.
+     * @since 23.2
      */
     protected Set<Object> getSelectedItemIds() {
         return Collections.unmodifiableSet(this.selected.keySet());
@@ -230,10 +232,8 @@ public abstract class AbstractGridMultiSelectionModel<T>
     @Override
     public void selectAll() {
         updateSelection(
-                (Set<T>) getGrid().getDataCommunicator().getDataProvider()
-                        .fetch(getGrid().getDataCommunicator().buildQuery(0,
-                                Integer.MAX_VALUE))
-                        .collect(Collectors.toSet()),
+                fetchAllItems()
+                        .collect(Collectors.toCollection(LinkedHashSet::new)),
                 Collections.emptySet());
         selectionColumn.setSelectAllCheckboxState(true);
         selectionColumn.setSelectAllCheckboxIndeterminateState(false);
@@ -426,17 +426,9 @@ public abstract class AbstractGridMultiSelectionModel<T>
         if (!isSelectAllCheckboxVisible()) {
             return;
         }
-        Stream<T> allItemsStream;
-        DataProvider<T, ?> dataProvider = getGrid().getDataCommunicator()
-                .getDataProvider();
-        if (dataProvider instanceof HierarchicalDataProvider) {
-            allItemsStream = fetchAllHierarchical(
-                    (HierarchicalDataProvider<T, ?>) dataProvider);
-        } else {
-            allItemsStream = dataProvider.fetch(getGrid().getDataCommunicator()
-                    .buildQuery(0, Integer.MAX_VALUE));
-        }
-        doUpdateSelection(allItemsStream.collect(Collectors.toSet()),
+        doUpdateSelection(
+                fetchAllItems()
+                        .collect(Collectors.toCollection(LinkedHashSet::new)),
                 Collections.emptySet(), true);
         selectionColumn.setSelectAllCheckboxState(true);
         selectionColumn.setSelectAllCheckboxIndeterminateState(false);
@@ -447,15 +439,20 @@ public abstract class AbstractGridMultiSelectionModel<T>
     }
 
     /**
-     * Fetch all items from the given hierarchical data provider.
+     * Fetch all items from the data provider. For hierarchical data providers,
+     * this includes all descendant items.
      *
-     * @param dataProvider
-     *            the data provider to fetch from
      * @return all items in the data provider
      */
-    private Stream<T> fetchAllHierarchical(
-            HierarchicalDataProvider<T, ?> dataProvider) {
-        return fetchAllDescendants(null, dataProvider);
+    private Stream<T> fetchAllItems() {
+        DataProvider<T, ?> dataProvider = getGrid().getDataCommunicator()
+                .getDataProvider();
+        if (dataProvider instanceof HierarchicalDataProvider) {
+            return fetchAllDescendants(null,
+                    (HierarchicalDataProvider<T, ?>) dataProvider);
+        }
+        return dataProvider.fetch(getGrid().getDataCommunicator().buildQuery(0,
+                Integer.MAX_VALUE));
     }
 
     /**
@@ -474,8 +471,7 @@ public abstract class AbstractGridMultiSelectionModel<T>
             return Stream.empty();
         }
         List<T> children = dataProvider
-                .fetchChildren(new HierarchicalQuery<>(null, parent))
-                .collect(Collectors.toList());
+                .fetchChildren(new HierarchicalQuery<>(null, parent)).toList();
         if (children.isEmpty()) {
             return Stream.empty();
         }
@@ -499,7 +495,7 @@ public abstract class AbstractGridMultiSelectionModel<T>
         Map<Object, T> addedItemsMap = mapItemsById(addedItems);
         Map<Object, T> removedItemsMap = mapItemsById(removedItems);
         addedItemsMap.keySet().stream().filter(removedItemsMap::containsKey)
-                .collect(Collectors.toList()).forEach(key -> {
+                .toList().forEach(key -> {
                     addedItemsMap.remove(key);
                     removedItemsMap.remove(key);
                 });
