@@ -21,7 +21,6 @@ import java.util.Collection;
 import java.util.List;
 import java.util.NoSuchElementException;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import com.vaadin.flow.component.ClientCallable;
@@ -70,6 +69,7 @@ import tools.jackson.databind.node.ObjectNode;
  * @param <T>
  *            the grid bean type
  * @author Vaadin Ltd
+ * @since 1.1
  */
 @JsModule("@vaadin/grid/src/vaadin-grid-tree-toggle.js")
 @JsModule("./treeGridConnector.ts")
@@ -96,7 +96,11 @@ public class TreeGrid<T> extends Grid<T>
      * @param dataCommunicatorBuilder
      *            Builder for {@link DataCommunicator} implementation this Grid
      *            uses to handle all data communication.
+     * @since 24.5
+     * @deprecated Override {@link #createDataCommunicator()} instead. This
+     *             constructor will be removed in Vaadin 26.
      */
+    @Deprecated(since = "25.3", forRemoval = true)
     protected TreeGrid(int pageSize,
             DataCommunicatorBuilder<T, GridArrayUpdater> dataCommunicatorBuilder) {
         super(pageSize, dataCommunicatorBuilder);
@@ -169,6 +173,7 @@ public class TreeGrid<T> extends Grid<T>
      * @param autoCreateColumns
      *            when <code>true</code>, columns are created automatically for
      *            the properties of the beanType
+     * @since 24.5
      */
     public TreeGrid(Class<T> beanType, boolean autoCreateColumns) {
         this(beanType, new TreeDataCommunicatorBuilder<>(), autoCreateColumns);
@@ -186,12 +191,17 @@ public class TreeGrid<T> extends Grid<T>
      * @param dataCommunicatorBuilder
      *            Builder for {@link DataCommunicator} implementation this Grid
      *            uses to handle all data communication.
+     * @since 24.5
+     * @deprecated Override {@link #createDataCommunicator()} instead. This
+     *             constructor will be removed in Vaadin 26.
      */
+    @Deprecated(since = "25.3", forRemoval = true)
     protected TreeGrid(Class<T> beanType,
             DataCommunicatorBuilder<T, GridArrayUpdater> dataCommunicatorBuilder) {
         this(beanType, dataCommunicatorBuilder, true);
     }
 
+    @Deprecated(since = "25.3", forRemoval = true)
     private TreeGrid(Class<T> beanType,
             DataCommunicatorBuilder<T, GridArrayUpdater> dataCommunicatorBuilder,
             boolean autoCreateColumns) {
@@ -327,6 +337,7 @@ public class TreeGrid<T> extends Grid<T>
      *             {@link #setItems(Collection, ValueProvider)},
      *             {@link #setItems(Stream, ValueProvider)} or
      *             {@link #setTreeData(TreeData)} instead.
+     * @since 18.0
      */
     @Deprecated
     @Override
@@ -352,6 +363,7 @@ public class TreeGrid<T> extends Grid<T>
      *             {@link #setItems(Collection, ValueProvider)},
      *             {@link #setItems(Stream, ValueProvider)} or
      *             {@link #setTreeData(TreeData)} instead.
+     * @since 18.0
      */
     @Deprecated
     @Override
@@ -378,6 +390,7 @@ public class TreeGrid<T> extends Grid<T>
      *             {@link #setItems(Collection, ValueProvider)},
      *             {@link #setItems(Stream, ValueProvider)} or
      *             {@link #setTreeData(TreeData)} instead.
+     * @since 18.0
      */
     @Deprecated
     @Override
@@ -402,6 +415,7 @@ public class TreeGrid<T> extends Grid<T>
      *             {@link #setItems(Collection, ValueProvider)},
      *             {@link #setItems(Stream, ValueProvider)} or
      *             {@link #setTreeData(TreeData)} instead.
+     * @since 18.0
      */
     @Deprecated
     @Override
@@ -426,6 +440,7 @@ public class TreeGrid<T> extends Grid<T>
      *             {@link #setItems(Collection, ValueProvider)},
      *             {@link #setItems(Stream, ValueProvider)} or
      *             {@link #setTreeData(TreeData)} instead.
+     * @since 18.0
      */
     @Deprecated
     @Override
@@ -445,6 +460,7 @@ public class TreeGrid<T> extends Grid<T>
      *
      * @return exception is thrown
      * @deprecated not supported
+     * @since 18.0
      */
     @Deprecated
     @Override
@@ -462,6 +478,7 @@ public class TreeGrid<T> extends Grid<T>
      *
      * @return exception is thrown
      * @deprecated not supported
+     * @since 18.0
      */
     @Deprecated
     @Override
@@ -479,6 +496,7 @@ public class TreeGrid<T> extends Grid<T>
      *
      * @return exception is thrown
      * @deprecated not supported
+     * @since 18.0
      */
     @Deprecated
     @Override
@@ -539,6 +557,7 @@ public class TreeGrid<T> extends Grid<T>
      * @return the new column
      * @see #addColumn(Renderer)
      * @see #removeColumn(Column)
+     * @since 5.1
      */
     public <V extends Component> Column<T> addComponentHierarchyColumn(
             ValueProvider<T, V> componentProvider) {
@@ -599,8 +618,7 @@ public class TreeGrid<T> extends Grid<T>
     public Column<T> setHierarchyColumn(String propertyName,
             ValueProvider<T, ?> valueProvider) {
         List<String> currentPropertyList = getColumns().stream()
-                .map(Column::getKey).filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .map(Column::getKey).filter(Objects::nonNull).toList();
         resetColumns(propertyName, valueProvider, currentPropertyList);
         return getColumnByKey(propertyName);
     }
@@ -740,8 +758,8 @@ public class TreeGrid<T> extends Grid<T>
      * @param items
      *            the items to expand
      */
-    public void expand(Collection<T> items) {
-        expand(items, false);
+    public void expand(Collection<? extends T> items) {
+        expand(new ArrayList<>(items), false);
     }
 
     /**
@@ -771,9 +789,8 @@ public class TreeGrid<T> extends Grid<T>
      *            the items to expand recursively
      * @param depth
      *            the maximum depth of recursion
-     * @since 8.4
      */
-    public void expandRecursively(Stream<T> items, int depth) {
+    public void expandRecursively(Stream<? extends T> items, int depth) {
         expandRecursively(items.toList(), depth);
     }
 
@@ -790,9 +807,8 @@ public class TreeGrid<T> extends Grid<T>
      *            the items to expand recursively
      * @param depth
      *            the maximum depth of recursion
-     * @since 8.4
      */
-    public void expandRecursively(Collection<T> items, int depth) {
+    public void expandRecursively(Collection<? extends T> items, int depth) {
         var expandedItems = getDataCommunicator()
                 .expand(getItemsWithChildrenRecursively(items, depth));
         fireEvent(new ExpandEvent<>(this, false, expandedItems));
@@ -819,8 +835,8 @@ public class TreeGrid<T> extends Grid<T>
      * @param items
      *            the collection of items to collapse
      */
-    public void collapse(Collection<T> items) {
-        collapse(items, false);
+    public void collapse(Collection<? extends T> items) {
+        collapse(new ArrayList<>(items), false);
     }
 
     /**
@@ -850,9 +866,8 @@ public class TreeGrid<T> extends Grid<T>
      *            the items to collapse recursively
      * @param depth
      *            the maximum depth of recursion
-     * @since 8.4
      */
-    public void collapseRecursively(Stream<T> items, int depth) {
+    public void collapseRecursively(Stream<? extends T> items, int depth) {
         collapseRecursively(items.toList(), depth);
     }
 
@@ -869,9 +884,8 @@ public class TreeGrid<T> extends Grid<T>
      *            the items to collapse recursively
      * @param depth
      *            the maximum depth of recursion
-     * @since 8.4
      */
-    public void collapseRecursively(Collection<T> items, int depth) {
+    public void collapseRecursively(Collection<? extends T> items, int depth) {
         var collapsedItems = getDataCommunicator()
                 .collapse(getItemsWithChildrenRecursively(items, depth));
         fireEvent(new CollapseEvent<>(this, false, collapsedItems));
@@ -894,8 +908,8 @@ public class TreeGrid<T> extends Grid<T>
      * @return collection of given items and their children recursively until
      *         the given depth
      */
-    protected Collection<T> getItemsWithChildrenRecursively(Collection<T> items,
-            int depth) {
+    protected Collection<T> getItemsWithChildrenRecursively(
+            Collection<? extends T> items, int depth) {
         List<T> itemsWithChildren = new ArrayList<>();
         if (depth < 0) {
             return itemsWithChildren;
@@ -907,7 +921,7 @@ public class TreeGrid<T> extends Grid<T>
                             getItemsWithChildrenRecursively(getDataProvider()
                                     .fetchChildren(
                                             new HierarchicalQuery<>(null, item))
-                                    .collect(Collectors.toList()), depth - 1));
+                                    .toList(), depth - 1));
                 });
         return itemsWithChildren;
     }
@@ -957,6 +971,7 @@ public class TreeGrid<T> extends Grid<T>
      *
      * @param index
      *            zero based index of the item to scroll to
+     * @since 20.0.5
      */
     @Override
     public void scrollToIndex(int index) {
@@ -988,6 +1003,7 @@ public class TreeGrid<T> extends Grid<T>
      * @throws UnsupportedOperationException
      *             if the data provider uses a hierarchy format other than
      *             {@link HierarchyFormat#NESTED}
+     * @since 24.1
      */
     public void scrollToIndex(int... path) {
         if (!getDataProvider().getHierarchyFormat()
@@ -1126,6 +1142,7 @@ public class TreeGrid<T> extends Grid<T>
      *            the item to scroll to
      * @throws NoSuchElementException
      *             if the item does not belong to the tree
+     * @since 24.4
      */
     @Override
     public void scrollToItem(T item) {
