@@ -11,7 +11,6 @@ package com.vaadin.flow.component.gridpro;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.slf4j.LoggerFactory;
@@ -39,17 +38,11 @@ import com.vaadin.flow.dom.Element;
 import com.vaadin.flow.function.SerializablePredicate;
 import com.vaadin.flow.function.ValueProvider;
 import com.vaadin.flow.internal.JacksonSerializer;
-import com.vaadin.flow.internal.JacksonUtils;
 import com.vaadin.flow.shared.Registration;
 
 import tools.jackson.databind.node.ArrayNode;
 import tools.jackson.databind.node.ObjectNode;
 
-@Tag("vaadin-grid-pro")
-@NpmPackage(value = "@vaadin/grid-pro", version = "25.2.0-alpha2")
-@JsModule("@vaadin/grid-pro/src/vaadin-grid-pro.js")
-@JsModule("@vaadin/grid-pro/src/vaadin-grid-pro-edit-column.js")
-@JsModule("./gridProConnector.js")
 /**
  * Grid Pro is an extension of the Grid component that provides inline editing
  * with full keyboard navigation.
@@ -59,7 +52,13 @@ import tools.jackson.databind.node.ObjectNode;
  * @param <T>
  *            the grid bean type
  *
+ * @since 1.0
  */
+@Tag("vaadin-grid-pro")
+@NpmPackage(value = "@vaadin/grid-pro", version = "25.3.0-alpha12")
+@JsModule("@vaadin/grid-pro/src/vaadin-grid-pro.js")
+@JsModule("@vaadin/grid-pro/src/vaadin-grid-pro-edit-column.js")
+@JsModule("./gridProConnector.js")
 public class GridPro<E> extends Grid<E> {
 
     /**
@@ -105,8 +104,6 @@ public class GridPro<E> extends Grid<E> {
     }
 
     private void setup() {
-        addDataGenerator(this::generateCellEditableData);
-
         addItemPropertyChangedListener(e -> {
             if (e.getItem() == null) {
                 return;
@@ -151,7 +148,7 @@ public class GridPro<E> extends Grid<E> {
                 var itemKey = getDataCommunicator().getKeyMapper()
                         .key(e.getItem());
                 UI.getCurrentOrThrow().getPage().executeJs(
-                        "window.Vaadin.Flow.gridProConnector.selectAll($0, $1, $2)",
+                        "window.Vaadin.Flow.gridProConnector.handleCustomEditorValueUpdate($0, $1, $2)",
                         column.getEditorField().getElement(), itemKey,
                         this.getElement());
             }
@@ -187,11 +184,6 @@ public class GridPro<E> extends Grid<E> {
     /**
      * Server-side component for the {@code <vaadin-grid-edit-column>} element.
      *
-     * <p>
-     * Every added column sends data to the client side regardless of its
-     * visibility state. Don't add a new column at all or use
-     * {@link GridPro#removeColumn(Column)} to avoid sending extra data.
-     *
      * @param <T>
      *            type of the underlying grid this column is compatible with
      */
@@ -219,9 +211,18 @@ public class GridPro<E> extends Grid<E> {
                 Renderer<T> renderer) {
             super(grid, columnId, renderer);
 
+            addDataGenerator(this::generateCellEditableData);
+
             addAttachListener(e -> this.getElement().executeJs(
                     "window.Vaadin.Flow.gridProConnector.initCellEditableProvider($0)",
                     this.getElement()));
+        }
+
+        private void generateCellEditableData(T item, ObjectNode jsonObject) {
+            if (cellEditableProvider != null) {
+                jsonObject.withObjectProperty("cellEditable")
+                        .put(getInternalId(), cellEditableProvider.test(item));
+            }
         }
 
         /**
@@ -275,7 +276,6 @@ public class GridPro<E> extends Grid<E> {
          *
          * @return the editor type
          */
-        @Synchronize("editor-type-changed")
         protected String getEditorType() {
             return getElement().getProperty("editorType", "text");
         }
@@ -369,6 +369,7 @@ public class GridPro<E> extends Grid<E> {
      * @see EditColumnConfigurator#checkbox(ItemUpdater)
      * @see EditColumnConfigurator#select(ItemUpdater, List)
      * @see #removeColumn(Column)
+     * @since 2.0
      */
     public EditColumnConfigurator<E> addEditColumn(
             ValueProvider<E, ?> valueProvider, Renderer<E> renderer) {
@@ -404,6 +405,7 @@ public class GridPro<E> extends Grid<E> {
      * @see EditColumnConfigurator#checkbox(ItemUpdater)
      * @see EditColumnConfigurator#select(ItemUpdater, List)
      * @see #removeColumn(Column)
+     * @since 2.0
      */
     public <V extends Comparable<? super V>> EditColumnConfigurator<E> addEditColumn(
             ValueProvider<E, V> valueProvider, String... sortingProperties) {
@@ -421,7 +423,7 @@ public class GridPro<E> extends Grid<E> {
      *
      * @param propertyName
      *            the property name of the new column, not <code>null</code>
-     * @return and edit column configurer for configuring the column editor
+     * @return an edit column configurer for configuring the column editor
      *
      * @see Grid#addColumn(String)
      * @see EditColumnConfigurator#text(ItemUpdater)
@@ -438,10 +440,10 @@ public class GridPro<E> extends Grid<E> {
     }
 
     /**
-     * Sets the value of the webcomponent's property enterNextRow. Default
-     * values is false. When true, pressing Enter while in cell edit mode will
-     * move focus to the editable cell in the next row (Shift + Enter - same,
-     * but for previous row).
+     * Sets the value of the webcomponent's property enterNextRow. Default value
+     * is false. When true, pressing Enter while in cell edit mode will move
+     * focus to the editable cell in the next row (Shift + Enter - same, but for
+     * previous row).
      *
      * @param enterNextRow
      *            when <code>true</code>, pressing Enter while in cell edit mode
@@ -453,27 +455,27 @@ public class GridPro<E> extends Grid<E> {
     }
 
     /**
-     * Gets the value of the webcomponent's property enterNextRow. Default
-     * values is false. When true, pressing Enter while in cell edit mode will
-     * move focus to the editable cell in the next row (Shift + Enter - same,
-     * but for previous row).
+     * Gets the value of the webcomponent's property enterNextRow. Default value
+     * is false. When true, pressing Enter while in cell edit mode will move
+     * focus to the editable cell in the next row (Shift + Enter - same, but for
+     * previous row).
      *
      * @return enterNextRow value
      */
-    @Synchronize("enter-next-row-changed")
     public boolean getEnterNextRow() {
         return getElement().getProperty("enterNextRow", false);
     }
 
     /**
      * Sets the value of the webcomponent's property singleCellEdit. Default
-     * values is false. When true, after moving to next or previous editable
-     * cell using Tab / Shift+Tab, it will be focused without edit mode.
+     * value is false. When true, after moving to next or previous editable cell
+     * using Tab / Shift+Tab, it will be focused without edit mode.
      *
      * @param singleCellEdit
      *            when <code>true</code>, after moving to next or previous
      *            editable cell using Tab / Shift+Tab, it will be focused
      *            without edit mode
+     * @since 2.0
      */
     public void setSingleCellEdit(boolean singleCellEdit) {
         getElement().setProperty("singleCellEdit", singleCellEdit);
@@ -481,12 +483,12 @@ public class GridPro<E> extends Grid<E> {
 
     /**
      * Gets the value of the webcomponent's property singleCellEdit. Default
-     * values is false. When true, after moving to next or previous editable
-     * cell using Tab / Shift+Tab, it will be focused without edit mode.
+     * value is false. When true, after moving to next or previous editable cell
+     * using Tab / Shift+Tab, it will be focused without edit mode.
      *
      * @return singleCellEdit value
+     * @since 2.0
      */
-    @Synchronize("single-cell-edit-changed")
     public boolean getSingleCellEdit() {
         return getElement().getProperty("singleCellEdit", false);
     }
@@ -499,6 +501,7 @@ public class GridPro<E> extends Grid<E> {
      * @param editOnClick
      *            when <code>true</code>, cell edit mode gets activated on a
      *            single click instead of the default double click
+     * @since 19.0
      */
     public void setEditOnClick(boolean editOnClick) {
         getElement().setProperty("editOnClick", editOnClick);
@@ -510,6 +513,7 @@ public class GridPro<E> extends Grid<E> {
      * instead of the default double click.
      *
      * @return editOnClick value
+     * @since 19.0
      */
     @Synchronize("edit-on-click-changed")
     public boolean getEditOnClick() {
@@ -534,34 +538,12 @@ public class GridPro<E> extends Grid<E> {
         return column;
     }
 
-    private void generateCellEditableData(E item, ObjectNode jsonObject) {
-        // Get edit columns with cell editable providers
-        List<EditColumn<E>> editColumns = getColumns().stream()
-                .filter(column -> column instanceof EditColumn<E> editColumn
-                        && editColumn.cellEditableProvider != null)
-                .map(column -> (EditColumn<E>) column).toList();
-
-        // Don't generate any data if there are no columns with cell editable
-        // providers, assuming that all cells are editable
-        if (editColumns.isEmpty()) {
-            return;
-        }
-
-        // Generate data for each column
-        ObjectNode cellEditableData = JacksonUtils.createObjectNode();
-        editColumns.forEach(column -> {
-            boolean cellEditable = column.cellEditableProvider.test(item);
-            cellEditableData.put(column.getInternalId(), cellEditable);
-        });
-
-        jsonObject.set("cellEditable", cellEditableData);
-    }
-
     /**
      * Event fired when the user starts to edit an existing item.
      *
      * @param <E>
      *            the bean type
+     * @since 2.0
      */
     @DomEvent("cell-edit-started")
     public static class CellEditStartedEvent<E>
@@ -583,6 +565,7 @@ public class GridPro<E> extends Grid<E> {
          *            represented in Grid
          * @param path
          *            item subproperty that was changed
+         * @since 25.0
          */
         public CellEditStartedEvent(GridPro<E> source, boolean fromClient,
                 @EventData("event.detail.item") ObjectNode item,
@@ -619,6 +602,7 @@ public class GridPro<E> extends Grid<E> {
      * @param listener
      *            a listener to be notified
      * @return a handle that can be used to unregister the listener
+     * @since 2.0
      */
     public Registration addCellEditStartedListener(
             ComponentEventListener<CellEditStartedEvent<E>> listener) {
@@ -653,6 +637,7 @@ public class GridPro<E> extends Grid<E> {
          *            represented in Grid
          * @param path
          *            item subproperty that was changed
+         * @since 25.0
          */
         public ItemPropertyChangedEvent(GridPro<E> source, boolean fromClient,
                 @EventData("event.detail.item") ObjectNode item,
@@ -805,11 +790,11 @@ public class GridPro<E> extends Grid<E> {
      *
      * @param variants
      *            theme variants to add
+     * @since 23.1
      */
     public void addThemeVariants(GridProVariant... variants) {
-        getThemeNames()
-                .addAll(Stream.of(variants).map(GridProVariant::getVariantName)
-                        .collect(Collectors.toList()));
+        getThemeNames().addAll(Stream.of(variants)
+                .map(GridProVariant::getVariantName).toList());
     }
 
     /**
@@ -817,10 +802,10 @@ public class GridPro<E> extends Grid<E> {
      *
      * @param variants
      *            theme variants to remove
+     * @since 23.1
      */
     public void removeThemeVariants(GridProVariant... variants) {
-        getThemeNames().removeAll(
-                Stream.of(variants).map(GridProVariant::getVariantName)
-                        .collect(Collectors.toList()));
+        getThemeNames().removeAll(Stream.of(variants)
+                .map(GridProVariant::getVariantName).toList());
     }
 }
