@@ -21,9 +21,7 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
-import com.vaadin.experimental.FeatureFlags;
 import com.vaadin.flow.component.Component;
 import com.vaadin.flow.component.ComponentEvent;
 import com.vaadin.flow.component.ComponentEventListener;
@@ -51,18 +49,14 @@ import com.vaadin.flow.signals.Signal;
  * can be configured with {@link #setItems(Collection)}.
  *
  * @author Vaadin Ltd.
+ * @since 14.7
  */
 @Tag("vaadin-message-list")
 @JsModule("./messageListConnector.js")
 @JsModule("@vaadin/message-list/src/vaadin-message-list.js")
-@NpmPackage(value = "@vaadin/message-list", version = "25.2.0-alpha2")
+@NpmPackage(value = "@vaadin/message-list", version = "25.3.0-alpha12")
 public class MessageList extends Component
         implements HasStyle, HasSize, LocaleChangeObserver {
-
-    /**
-     * The feature flag ID for MessageList attachments.
-     */
-    static final String FEATURE_FLAG_ID = MessageListAttachmentsFeatureFlagProvider.FEATURE_FLAG_ID;
 
     private static final String ITEMS_BINDING = "items";
 
@@ -117,7 +111,7 @@ public class MessageList extends Component
      * @param itemsSignal
      *            the signal to bind the items to, not {@code null}
      * @see #bindItems(Signal)
-     * @since 25.1
+     * @since 25.2
      */
     public <S extends Signal<MessageListItem>> MessageList(
             Signal<List<S>> itemsSignal) {
@@ -163,6 +157,7 @@ public class MessageList extends Component
      *
      * @param item
      *            the item to add, not {@code null}
+     * @since 24.8
      */
     public void addItem(MessageListItem item) {
         SignalBindingUtil.throwIfBindingActive(this, ITEMS_BINDING);
@@ -201,14 +196,14 @@ public class MessageList extends Component
      *            the type of signal holding individual items
      * @param itemsSignal
      *            the signal to bind the items to, not {@code null}
-     * @since 25.1
+     * @since 25.2
      */
     public <S extends Signal<MessageListItem>> SignalBinding<List<S>> bindItems(
             Signal<List<S>> itemsSignal) {
         return SignalBindingUtil.effectBinding(this, ITEMS_BINDING, itemsSignal,
                 signalItems -> {
                     var messageItems = signalItems.stream().map(Signal::get)
-                            .collect(Collectors.toList());
+                            .toList();
                     updateItems(messageItems);
                 });
     }
@@ -286,8 +281,6 @@ public class MessageList extends Component
      *            the UI the component is attached to
      */
     private void handleFullUpdate(UI ui) {
-        checkAttachmentsFeatureFlag(ui, items);
-
         // Sync clientText for items
         items.forEach(item -> item.clientText = item.getText());
 
@@ -332,7 +325,6 @@ public class MessageList extends Component
         }
 
         var newItems = items.subList(pendingAddItemsIndex, items.size());
-        checkAttachmentsFeatureFlag(ui, newItems);
 
         // Sync clientText for new items
         newItems.forEach(item -> item.clientText = item.getText());
@@ -341,36 +333,6 @@ public class MessageList extends Component
         // Call the connector function to add items
         getElement().executeJs(CONNECTOR_OBJECT + ".addItems(this, $0, $1)",
                 newItemsJson, ui.getLocale().toLanguageTag());
-    }
-
-    /**
-     * Checks if any of the given items have attachments and if so, verifies
-     * that the feature flag is enabled.
-     *
-     * @param ui
-     *            the UI to get the feature flags from
-     * @param itemsToCheck
-     *            the items to check for attachments
-     * @throws MessageListAttachmentsExperimentalFeatureException
-     *             if attachments are used without the feature flag enabled
-     */
-    private void checkAttachmentsFeatureFlag(UI ui,
-            List<MessageListItem> itemsToCheck) {
-        boolean hasAttachments = itemsToCheck.stream()
-                .anyMatch(item -> !item.getAttachments().isEmpty());
-        if (hasAttachments) {
-            FeatureFlags featureFlags = FeatureFlags
-                    .get(ui.getSession().getService().getContext());
-
-            // Check if either the specific messageListAttachments flag or the
-            // umbrella aiComponents flag is enabled
-            boolean enabled = featureFlags.isEnabled(FEATURE_FLAG_ID)
-                    || featureFlags.isEnabled("aiComponents");
-
-            if (!enabled) {
-                throw new MessageListAttachmentsExperimentalFeatureException();
-            }
-        }
     }
 
     @Override
@@ -384,6 +346,7 @@ public class MessageList extends Component
      *
      * @param markdown
      *            {@code true} if the message text is parsed as Markdown.
+     * @since 24.8
      */
     public void setMarkdown(boolean markdown) {
         getElement().setProperty("markdown", markdown);
@@ -393,6 +356,7 @@ public class MessageList extends Component
      * Returns whether the messages are parsed as markdown.
      *
      * @return {@code true} if the message text is parsed as Markdown.
+     * @since 24.8
      */
     public boolean isMarkdown() {
         return getElement().getProperty("markdown", false);
@@ -406,6 +370,7 @@ public class MessageList extends Component
      * @param announceMessages
      *            {@code true} if new messages should be announced to assistive
      *            technologies.
+     * @since 24.8
      */
     public void setAnnounceMessages(boolean announceMessages) {
         getElement().setProperty("announceMessages", announceMessages);
@@ -416,6 +381,7 @@ public class MessageList extends Component
      *
      * @return {@code true} if new messages are announced to assistive
      *         technologies.
+     * @since 24.8
      */
     public boolean isAnnounceMessages() {
         return getElement().getProperty("announceMessages", false);
@@ -427,6 +393,7 @@ public class MessageList extends Component
      * @param listener
      *            the listener to add
      * @return a registration that can be used to remove the listener
+     * @since 25.1
      */
     public Registration addAttachmentClickListener(
             ComponentEventListener<AttachmentClickEvent> listener) {
@@ -439,6 +406,8 @@ public class MessageList extends Component
      * Note: This event listens to the {@code attachment-click-flow} event
      * dispatched by the connector, which enriches the web component's
      * {@code attachment-click} event with item and attachment indexes.
+     * 
+     * @since 25.1
      */
     @DomEvent("attachment-click-flow")
     public static class AttachmentClickEvent
